fix: fixed text align issue on input type submit on firefox

--- a/css/post-edit-make.css
+++ b/css/post-edit-make.css
@@ -144,6 +144,7 @@ textarea:hover, textarea:focus-within{
     justify-content: center;
     color: var(--text-white);
     border-radius: 0.5rem;
+    text-align: center;
 }
 
 .loadMorePostsEditPageBTN, #createNewSubmit, #editSubmit, #discardChanges{
